--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -1,5 +1,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<body>
-<h1 th:text="'Hello, ' + ${user.name}"></h1>
-</body>
+    <head>
+        <link rel="stylesheet" href="./style.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
+        <script src="./script.js"></script>
+    </head>
+    <body>
+        <iframe name="dummyframe" id="dummyframe" style="display:none;"></iframe>
+        <form id="eventForm" action="events" target="dummyframe" method="post" enctype="multipart/form-data">
+            <label for="event-name">Event:</label><input type="text" id="event-name" name="event-name"/><br>
+            <input type="file" id="event-image" name="event-image" accept="image/*"/><br>
+            <button value="upload">Submit</button>
+        </form>
+        <table id="eventTable">
+            <tbody th:id="${selectedEvent}">
+            <tr>
+                <th th:each="event, iter: ${events}" th:id="eventHeader + ${iter.index}" th:text="${event.name}"></th>
+            </tr>
+            <tr>
+                <td th:each="event, iter: ${events}" th:id="eventImage + ${iter.index}" >
+                    <img src="uploads/car.JPG" alt="car" th:attr="src=@{uploads/__${event.filename}__}, alt=${event.name}"/>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div id="selectionOutline"></div>
+    </body>
 </html>
