--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
+    <title>Sweetea Admin Panel</title>
     <script src="./script.js"></script>
 </head>
 <body>
@@ -15,8 +16,8 @@
     </div>
 </header>
 <div class="container-xxl">
-    <div class="container">
-        <form id="eventForm" action="events" target="dummyframe" method="post" enctype="multipart/form-data">
+    <div class="container row" style="margin-bottom: 8px;">
+        <form class="container container-border col p-2" id="eventForm" action="events" target="dummyframe" method="post" enctype="multipart/form-data">
             <div class="mb-2 row">
                 <div class="col">
                     <label class="form-label" for="event-name">Event:</label>
@@ -41,7 +42,7 @@
                     <input class="form-control" style="display: none;" type="text" id="link-url" name="link-url"/>
                 </div>
             </div>
-            <div class="mb-2 row">
+            <div class="mb-2 col">
                 <input class="form-select" type="file" id="event-image" name="event-image" accept="image/*"/>
             </div>
             <input class="form-control" type="hidden" id="link-is-route" name="link-is-route"/>
@@ -49,8 +50,26 @@
                 <button class="btn btn-sweetea me-md-2" value="upload">Submit</button>
             </div>
         </form>
+        <div class="container container-border ms-4 p-2 w-25">
+            <span class="form-label h4 mb-4">Bears per free Drink:</span>
+            <div class="mb-2 row">
+                <div class="col">
+                    <label class="form-label" for="current-bear-value">Current Value</label>
+                    <input class="form-control" disabled th:attr="value=${currentBearValue}" id="current-bear-value" name="currentBearValue"/>
+
+                </div>
+                <div class="col">
+                    <label class="form-label" for="bear-value">New Value:</label>
+                    <input class="form-control" type="text" th:placeholder="${currentBearValue}" id="bear-value" name="bear-value"/><br>
+                </div>
+            </div>
+            <div class="mb-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-sweetea me-md-2" id="set-bear-value">Submit</button>
+            </div>
+
+        </div>
     </div>
-    <div id="eventContainer" class="container">
+    <div id="eventContainer" class="container container-border">
         <table id="eventTable" class="table table-striped-columns bd-example">
             <tbody>
             <tr id="header-row">
