--- a/server/src/main/resources/templates/style.css
+++ b/server/src/main/resources/templates/style.css
@@ -78,10 +78,12 @@ tr > *{
     --bs-btn-disabled-bg: var(--sweetea-blue);
     --bs-btn-disabled-border-color: var(--sweetea-blue);
 }
-#eventContainer{
-    overflow-y: auto;
+.container-border{
     border: 1px solid var(--bs-border-color);
     border-radius: var(--bs-border-radius);
+}
+#eventContainer{
+    overflow-y: auto;
 }
 #eventContainer::-webkit-scrollbar{
     width: 5px;
